; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_erp.c_zfcp_erp_unit_shutdown.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_erp.c_zfcp_erp_unit_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zfcp_unit = type { i32 }

@ZFCP_STATUS_COMMON_RUNNING = common dso_local global i32 0, align 4
@ZFCP_STATUS_COMMON_ERP_FAILED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfcp_erp_unit_shutdown(%struct.zfcp_unit* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.zfcp_unit*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store %struct.zfcp_unit* %0, %struct.zfcp_unit** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32, i32* @ZFCP_STATUS_COMMON_RUNNING, align 4
  %11 = load i32, i32* @ZFCP_STATUS_COMMON_ERP_FAILED, align 4
  %12 = or i32 %10, %11
  store i32 %12, i32* %9, align 4
  %13 = load %struct.zfcp_unit*, %struct.zfcp_unit** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %9, align 4
  %16 = or i32 %14, %15
  %17 = load i8*, i8** %7, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @zfcp_erp_unit_reopen(%struct.zfcp_unit* %13, i32 %16, i8* %17, i8* %18)
  ret void
}

declare dso_local i32 @zfcp_erp_unit_reopen(%struct.zfcp_unit*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
